--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,35 @@
+buildscript {
+    ext.kotlin_version = '1.3.60'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
 plugins {
     id 'java-library'
     id "maven-publish"
 }
 
 apply plugin: 'java'
+apply plugin: 'kotlin'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 group = 'com.github.Kalcoder'
 archivesBaseName = "BukkitUtils"
-version = '1.0'
+version = '1.0.2'
 
-javadoc {
-    source = sourceSets.main.allJava
-    classpath = configurations.compile
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    from javadoc.destinationDir
+    archiveClassifier = 'javadoc'
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    from sourceSets.main.allJava
+    archiveClassifier = 'sources'
 }
 
 publishing {
@@ -30,7 +45,9 @@ publishing {
     }
     publications {
         gpr(MavenPublication) {
-            from (components.java)
+            from components.java
+            artifact javadocJar
+            artifact sourcesJar
         }
     }
 }
@@ -46,6 +63,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.bukkit:bukkit:1.14.1-R0.1-SNAPSHOT'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 import org.apache.tools.ant.filters.ReplaceTokens
@@ -53,5 +71,15 @@ import org.apache.tools.ant.filters.ReplaceTokens
 processResources {
     from(sourceSets.main.resources.srcDirs) {
         filter ReplaceTokens, tokens: [version: version]
+    }
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
