--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,17 @@ buildscript {
     ext.kotlin_version = '1.3.60'
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+
 plugins {
     id 'java-library'
     id "maven-publish"
+    id "org.jetbrains.dokka" version "0.10.0"
 }
 
 apply plugin: 'java'
@@ -20,11 +23,21 @@ targetCompatibility = 1.8
 
 group = 'com.github.Kalcoder'
 archivesBaseName = "BukkitUtils"
-version = '1.0.2'
+version = '1.1'
+
+dokka {
+    outputFormat = 'javadoc'
+    outputDirectory = "$buildDir/dokka"
+}
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
     archiveClassifier = 'javadoc'
+}
+
+task dokkaJar(type: Jar, dependsOn: dokka) {
+    from dokka.outputDirectory
+    archiveClassifier = "dokka"
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -46,7 +59,8 @@ publishing {
     publications {
         gpr(MavenPublication) {
             from components.java
-            artifact javadocJar
+            artifact dokkaJar
+//            artifact javadocJar
             artifact sourcesJar
         }
     }
@@ -54,6 +68,7 @@ publishing {
 
 repositories {
     mavenCentral()
+    jcenter()
     maven {
         name = 'spigotmc-repo'
         url = 'https://hub.spigotmc.org/nexus/content/groups/public/'
